# RGB-PQ

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/rgb-pq-bench/: Cargo.toml
crates/rgb-pq-bench/src/: lib.rs
crates/rgb-pq-chain/: Cargo.toml
crates/rgb-pq-chain/src/: backend.rs  backend_impl.rs  indexer.rs  lib.rs  network.rs  rpc.rs
crates/rgb-pq-commit/: Cargo.toml
crates/rgb-pq-commit/examples/: build_p2mrret_tree.rs  verify_merkle.rs
crates/rgb-pq-commit/src/: anchor.rs  commitment.rs  lib.rs  multi.rs  p2mrret.rs
crates/rgb-pq-core/: Cargo.toml
crates/rgb-pq-core/src/: domain.rs  error.rs  lib.rs  limits.rs
crates/rgb-pq-resolver/: Cargo.toml
crates/rgb-pq-resolver/src/: lib.rs  resolver.rs  witness.rs
crates/rgb-pq-rgb/: Cargo.toml
crates/rgb-pq-rgb/src/: lib.rs
crates/rgb-pq-seal/: Cargo.toml
crates/rgb-pq-seal/src/: lib.rs  property.rs  seal.rs  types.rs  vectors.rs
crates/rgb-pq-tx/: Cargo.toml
crates/rgb-pq-tx/examples/: insert_opret.rs
crates/rgb-pq-tx/src/: commit.rs  lib.rs
docs/: audit.md  btq-p2mr-seal.md  commitment-binding.md  local-e2e.md  release-readiness.md  repo-notes.md  verification-budget.md
scripts/: build-btq.sh  e2e-local.sh  setup-external.sh
tests/rgb-pq-e2e/: Cargo.toml
tests/rgb-pq-e2e/src/: lib.rs
tests/rgb-pq-e2e/tests/: e2e.rs
