[workspace]
resolver = "2"
members = [
    "crates/rgb-pq-core",
    "crates/rgb-pq-seal",
    "crates/rgb-pq-commit",
    "crates/rgb-pq-chain",
    "crates/rgb-pq-resolver",
    "crates/rgb-pq-rgb",
    "crates/rgb-pq-tx",
    "tests/rgb-pq-e2e",
]
# Vendored upstream repos are path-deps, NOT workspace members (each has its own
# workspace root / toolchain). Exclude them from member discovery.
exclude = [
    "external/rgb-consensus",
    "external/rgb-ops",
    "external/rgb-schemas",
    "external/btq-core",
]

# ---------------------------------------------------------------------------
# Shared workspace metadata
# ---------------------------------------------------------------------------
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "Apache-2.0"
authors = ["RGB-PQ Contributors"]
homepage = "https://github.com/rgb-pq/rgb-pq"
repository = "https://github.com/rgb-pq/rgb-pq"
description = "RGB-style client-side validated assets using BTQ P2MR outputs as post-quantum single-use seals"
keywords = ["bitcoin", "rgb", "post-quantum", "dilithium", "p2mr"]
categories = ["cryptography::cryptocurrencies"]

# ---------------------------------------------------------------------------
# Force the entire dependency graph to use the VENDORED rgb-protocol crates
# (same versions) instead of pulling them from crates.io. This makes the
# workspace fully self-contained and avoids "multiple versions of rgbstd"
# when rgb-schemas transitively depends on rgb-ops.
# ---------------------------------------------------------------------------
[patch.crates-io]
rgb-consensus = { path = "external/rgb-consensus" }
rgb-ops       = { path = "external/rgb-ops" }
rgb-schemas   = { path = "external/rgb-schemas" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# `cargo` group is noisy for an internal workspace whose README/metadata lives
# at the root, not per-crate. Enable the useful subset manually if desired.
cargo = "allow"

# ---------------------------------------------------------------------------
# Vendored upstream (RGB production-track v0.11.1-rc.10 + BTQ node source).
# Path deps keep the workspace self-contained and reproducible.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# --- RGB production-track stack (vendored) -------------------------------
# The packages expose libs under their own names (rgbcore / rgbstd / schemata),
# so crates import them as `use rgbcore::...` regardless of the dep key.
rgb-consensus = { path = "external/rgb-consensus" }        # lib name: rgbcore
rgb-ops       = { path = "external/rgb-ops" }              # lib name: rgbstd
rgb-schemas   = { path = "external/rgb-schemas" }          # lib name: schemata

# Pinned to RGB's own bitcoin version so OutPoint/Txid/Transaction types line
# up across the boundary (RGB v0.11.1 uses bitcoin 0.32).
bitcoin       = { version = "0.32", default-features = false, features = ["serde", "rand"] }

# --- General deps -------------------------------------------------------
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
sha2          = "0.10"
hmac          = "0.12"
hex           = "0.4"
hex-conservative = "0.2"
thiserror     = "1"
displaydoc    = "0.2"
proptest      = "1"
rand          = "0.8"
bech32        = "0.11"
log           = "0.4"
rusqlite      = { version = "0.31", features = ["bundled"] }
ureq          = { version = "2", features = ["json", "tls"] }

# ---------------------------------------------------------------------------
# Release profile: keep debug info for an auditable local candidate.
# ---------------------------------------------------------------------------
[profile.release]
debug = "line-tables-only"
lto = "thin"
