[package]
name = "rgb-pq-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RGB-PQ BTQ chain backend, RPC client and indexer"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
rgb-pq-seal = { path = "../rgb-pq-seal" }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
ureq = { workspace = true }
parking_lot = "0.12"

[dependencies.rusqlite]
workspace = true
optional = true

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[lints]
workspace = true
