[package]
name = "rgb-pq-commit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RGB-PQ RGB transition commitment binder (opret anchor)"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
rgb-pq-seal = { path = "../rgb-pq-seal" }
rgbcore = { package = "rgb-consensus", workspace = true }
bitcoin = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = []

[lints]
workspace = true
