[package]
name = "rgb-pq-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RGB-PQ core: typed error hierarchy and domain-separation constants"

[dependencies]
thiserror = { workspace = true }
displaydoc = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
