[package]
name = "rgb-pq-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RGB-PQ P2MR seal resolver and ResolveWitness bridge"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
rgb-pq-seal = { path = "../rgb-pq-seal" }
rgb-pq-commit = { path = "../rgb-pq-commit" }
rgb-pq-chain = { path = "../rgb-pq-chain" }
rgb-consensus = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []

[lints]
workspace = true
