[package]
name = "rgb-pq-rgb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RGB-PQ real RGB integration glue (issuance, transfer, consignment)"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
rgb-pq-seal = { path = "../rgb-pq-seal" }
rgb-pq-commit = { path = "../rgb-pq-commit" }
rgb-pq-chain = { path = "../rgb-pq-chain" }
rgb-pq-resolver = { path = "../rgb-pq-resolver" }
rgbcore = { package = "rgb-consensus", workspace = true }
rgbstd = { package = "rgb-ops", workspace = true, features = ["fs"] }
schemata = { package = "rgb-schemas", workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = []

[lints]
workspace = true
