[package]
name = "rgb-pq-rgb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RGB-PQ real RGB integration glue (issuance, transfer, consignment)"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
rgb-pq-seal = { path = "../rgb-pq-seal" }
rgb-pq-commit = { path = "../rgb-pq-commit" }
rgb-pq-chain = { path = "../rgb-pq-chain" }
rgb-pq-resolver = { path = "../rgb-pq-resolver" }
rgb-consensus = { workspace = true }
rgb-ops = { workspace = true, features = ["fs"] }
rgb-schemas = { workspace = true }
amplify = "=4.8.1"
strict_encoding = { package = "rgb-strict-encoding", version = "~1.0.1" }
bitcoin = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = []

[lints]
workspace = true
