[package]
name = "rgb-pq-seal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RGB-PQ canonical BTQ P2MR single-use seal type"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
bitcoin = { workspace = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
