[package]
name = "rgb-pq-tx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RGB-PQ BTQ transaction construction helpers"

[dependencies]
rgb-pq-core = { path = "../rgb-pq-core" }
rgb-pq-seal = { path = "../rgb-pq-seal" }
rgb-pq-commit = { path = "../rgb-pq-commit" }
rgb-pq-chain = { path = "../rgb-pq-chain" }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = []

[lints]
workspace = true
